--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.sixinine.rtmpplayer.TestActivity"
+            android:name="com.sixnine.rtmpplayer.TestActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.sixinine.rtmpplayer.PlayActivity"
+            android:name="com.sixnine.rtmpplayer.PlayActivity"
             >
         </activity>
     </application>
